keep live collection totals tied to game counters